Alteracoes na estrutura jobs/workflows

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,9 @@ workflows:
     - publish-image:
         requires:
           - build
-    - deploy
+    - deploy:
+        requires:
+          - publish-image
     - continue-destroy:
         requires:
           - deploy
